--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="swiper-slide slide">
                     <div class="content">
                         <h3>the best courses you will find there!</h3>
-                        <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis, odio
+                        <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis, odiogit 
                             deserunt dignissimos neque porro.</span>
                         <a href="#">Get Started</a>
                     </div>
