--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                             deserunt dignissimos neque porro.</span>
                         <a href="#">Get Started</a>
                         <p>sadpkşdsağdapasdğ</p>
+                        <p>sadpkşdsağdapasdğ</p>
                     </div>
                 </div>
                 <div class="swiper-slide slide">
