Updated Home Page

--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 <body>
     <section id="header">
-        <div class="logo">
-            <i class="fa-solid fa-lightbulb"></i>
-            <span>educa</span>
-        </div>
-        <div class="sub-menu">
-            <ul>
-                <li>home</li>
-                <li>about</li>
-                <li>courses</li>
-                <li>contact</li>
-                <li><i class="fa-solid fa-user"></i></li>
-            </ul>
+        <div class="header-container">
+            <div class="logo">
+                <i class="fa-solid fa-lightbulb"></i>
+                <span>educa</span>
+            </div>
+            <div class="sub-menu">
+                <ul>
+                    <li>home</li>
+                    <li>about</li>
+                    <li>courses</li>
+                    <li>contact</li>
+                    <li><i class="fa-solid fa-user"></i></li>
+                </ul>
+            </div>
         </div>
     </section>
+
     <section id="hero">
         <div class="swiper slider">
             <div class="swiper-wrapper">
@@ -37,8 +40,6 @@
                         <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis, odio
                             deserunt dignissimos neque porro.</span>
                         <a href="#">Get Started</a>
-                        <p>sadpkşdsağdapasdğ</p>
-                        <p>sadpkşdsağdapasdğ</p>
                     </div>
                 </div>
                 <div class="swiper-slide slide">
@@ -61,6 +62,181 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
+
+    <section id="top-subject">
+        <h2>Our Top Subject</h2>
+        <div class="boxes">
+            <div class="box box-1">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+            <div class="box box-2">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+            <div class="box box-3">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+            <div class="box box-4">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+            <div class="box box-5">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+            <div class="box box-6">
+                <i class="fa-solid fa-palette"></i>
+                <span class="bold">Graphic Design</span>
+                <span>12 modules</span>
+            </div>
+        </div>
+    </section>
+
+    <section id="top-courses">
+        <div class="swiper slider1">
+            <h2>Our Top Courses</h2>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="box box-1">
+                        <img src="img/Startled-bro.png" alt="">
+                        <span>Web Development</span>
+                        <div class="hover-div">
+                            <span>Web Development</span>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="educa-social">
+                <div class="header-foot">
+                    <i class="fa-solid fa-lightbulb"></i>
+                    <span>Educa</span>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, molestiae?
+                </p>
+                <div class="icons">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+            </div>
+            <div class="quik-links">
+                <h1>Quick Links</h1>
+                <p>home</p>
+                <p>about</p>
+                <p>courses</p>
+                <p>contact</p>
+            </div>
+            <div class="useful-links">
+                <h1>Useful Links</h1>
+                <p>help center</p>
+                <p>ask questions</p>
+                <p>send feedback</p>
+                <p>terms of use</p>
+                <p>privacy policy</p>
+            </div>
+            <div class="new-letter">
+                <span>subscribe for latest updates</span>
+                <input type="text" name="" id="" placeholder="enter your mail">
+                <button type="button">Subscribe</button>
+            </div>
+        </div>
+        <!-- <div class="footer-sub-text">
+            <span>Created By Enes Murat Ali | All Rights Reserved!</span>
+        </div> -->
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/app.js"></script>
